# YORU

./: .gitignore  .gitmodules  README.md  YORU.yml  main.py  pyproject.toml  pytest.ini
.claude/: settings.local.json
config/: real-time_condition_template.yaml  template.yaml  yoru_default.yaml  yoru_demo_display.yaml
docs/: README.md  analysis.md  closed-loop.md  evaluation.md  install.md  training.md  tutorial.md
libs/: train_torchvision.py  train_ultralytics.py
libs/labelImg/: labelImg.py
libs/yolov5/: detect.py  export.py  hubconf.py  train.py  val.py
logs/: condition_file_log.json
tests/: __init__.py  benchmark.py  benchmark_all.py  conftest.py  daq_test.py  test_cli_basics.py  test_cli_help.py  test_config_schema.py  test_config_template.py  test_cuda.py  test_imports.py  test_inference_smoke.py  test_labelimg_import.py  test_repo_layout.py  test_training_smoke.py  test_trigger_plugins_api.py  test_trigger_plugins_import.py  test_yolo_wrapper.py
tests/junk_program/: arduino_test.py  back_delete.py  back_delete_2.py  back_delete_KNN.py  back_delete_KNN_2.py  calculate_correct_rate.py  camera_finder.py  class_convert.py  color_display.py  daq_test.py  demo.py  file_compare_name.py  file_name_changer.py  (+5 more)
trigger_plugins/: projecter_drawing.py  projecter_drawing_wing.py  standard_serial.py  straight.py  straight_display.py  straight_firmata.py  straight_nidaq.py
web/: gui_home.html
yoru/: __init__.py  __main__.py  analysis_GUI.py  app.py  cli.py  config_creator_GUI.py  create_labels_GUI.py  evaluation_GUI.py  grab_GUI.py  realtime_yoru_GUI.py  testing.py  train_GUI.py
(+75 files in other folders)
